# LS-Racing

./: CMakeLists.txt  LS_allegro.c  LS_allegro.h  README.md  base.h  classificacion.c  classificacion.h  corredores.h  fitxers.c  fitxers.h  general.h  gp.c  gp.h  grafica.c  grafica.h  main.c  menu.c  menu.h  peces.h  usuario.c  usuario.h
ficheros/: fitxerGPs.txt  fitxerPeces.txt
